--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ packages =
 	find:
 install_requires = 
     numpy
-    matplotlib
+    tensorflow
     pandas
+    matplotlib
     sklearn
+    tabulate
