--- a/setup.cfg
+++ b/setup.cfg
@@ -18,11 +18,13 @@ scripts =
 dependency_links = 
 	
 packages = 
-	find:
 install_requires = 
+    cython
     numpy
     tensorflow
     pandas
-    matplotlib
     sklearn
+    matplotlib
     tabulate
+    pyyaml
+    h5py
